--- a/newsletters/ieseg/news.html
+++ b/newsletters/ieseg/news.html
@@ -21,12 +21,10 @@
 				</td>
 				
 				<td style="width:100%; height:230px; border-collapse: collapse; ">
-					<div style=" margin:0 auto; border-collapse: collapse; width:100%; height:230px; margin-top:10px;">
-						<h1 style=" margin:0 auto; text-align:center; color:white; line-height:30px; padding-top: 20px; font-size: 72px; padding-bottom:10px; font-family:Arial; font-weight: bold;
-						letter-spacing:25px;padding-left: 25px;;
-						">NEWS</h1>
+					<div style=" margin:0 auto; border-collapse: collapse; width:100%; height:230px;">
+						<h1 style=" margin:0 auto; text-align:center; color:white; line-height:30px; padding-top: 20px; font-size: 72px; padding-bottom:10px; font-family:Arial; font-weight: bold;letter-spacing:25px;padding-left: 25px;">NEWS</h1>
 						<h2 style="margin:0 auto; text-align:center; color:white; font-size: 72px; padding-bottom:10px; font-family:Arial; font-weight: bold;letter-spacing:4px;padding-top: 14px;padding-left: 9px;">LETTER</h1>
-						<h3 style=" width: 50%;; margin:0 auto; text-align:center; color:#e6bb13; line-height:30px; border-top:1px solid #e6bb13; padding-top: 15px; font-family:Arial; font-style: italic;font-size: 40px; font-weight: bold;">Janvier 2015</h3>
+						<h3 style=" width: 50%;margin:0 auto; text-align:center; color:#e6bb13; line-height:30px; border-top:1px solid #e6bb13; padding-top: 15px; font-family:Arial; font-style: italic;font-size: 40px; font-weight: bold;">Janvier 2015</h3>
 					</div>
 				</td>
 				
